Use INSECURE as key in example config
Same as in rebuilderd.conf.

--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -1,7 +1,7 @@
 ## The rebuilderd to connect to
 endpoint = "http://127.0.0.1:8484"
 ## The server would either allowlist our key or require a signup secret
-#signup_secret = "your_signup_key"
+#signup_secret = "INSECURE"
 # the architectures the worker can build. Defaults to the worker's native architecture if omitted
 #supported_architectures = ["x86_64", "all"]
 
