Update sync config to support multiple components in one sync.

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -1,7 +1,7 @@
 ## rebuild all of archlinux core
 [profile."archlinux-core"]
 distro = "archlinux"
-suite = "core"
+components = ["core"]
 architectures = ["x86_64"]
 source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 
@@ -10,7 +10,7 @@ source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 ## has to match one of them to be included.
 #[profile."archlinux-community"]
 #distro = "archlinux"
-#suite = "community"
+#components = ["community"]
 #architectures = ["x86_64"]
 #source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 #maintainers = ["somebody"]
@@ -19,14 +19,14 @@ source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 
 [profile."fedora"]
 distro = "fedora"
-suite = "Everything"
+components = ["Everything"]
 architectures = ["x86_64"]
 releases = ["rawhide"]
 source = "https://ftp.halifax.rwth-aachen.de/fedora/linux/development"
 
 [profile."debian-main"]
 distro = "debian"
-suite = "main"
+components = ["main"]
 architectures = ["amd64"]
 #releases = ["buster", "sid"]
 releases = ["sid"]
@@ -34,14 +34,14 @@ source = "http://deb.debian.org/debian"
 
 [profile."debian-unreleased"]
 distro = "debian"
-suite = "main"
+components = ["main"]
 architectures = ["amd64"]
 releases = ["sid", "testing"]
 source = "http://deb.debian.org/debian"
 
 [profile."debian-anarchism"]
 distro = "debian"
-suite = "main"
+components = ["main"]
 architectures = ["amd64"]
 releases = ["sid"]
 pkgs = ["anarchism"]
@@ -50,7 +50,7 @@ source = "http://deb.debian.org/debian"
 # a set of packages to test certain edge-cases
 [profile."debian-misc"]
 distro = "debian"
-suite = "main"
+components = ["main"]
 architectures = ["amd64"]
 releases = ["sid"]
 pkgs = ["anarchism", "binutils-arm-none-eabi", "libglib2.0-bin", "libglib2.0-dev", "sniffglue", "librust-sniffglue-dev", "dfrs", "librust-dfrs-dev"]
