Add example option to the worker config.

--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -2,6 +2,8 @@
 endpoint = "http://127.0.0.1:8484"
 ## The server would either allowlist our key or require a signup secret
 #signup_secret = "your_signup_key"
+# the architectures the worker can build. Defaults to the worker's native architecture if omitted
+#supported_architectures = ["x86_64", "all"]
 
 [build]
 #timeout = 86400 # 24 hours
