--- a/contrib/confs/rebuilderd.conf
+++ b/contrib/confs/rebuilderd.conf
@@ -37,8 +37,11 @@
 ## Configure the delay to automatically retry failed rebuilds in hours. The
 ## default is 24h, this base is multiplied with the number of rebuilds, so the
 ## first retry would happen after 24h, the second retry would happen 48h after the
-## first retry and the third retry would happen 72h after the second retry. There
-## is no upper limit of retries, if you can't afford frequent retries it's
-## recommended to set this to a high value like 168 (1 week) or higher.
+## first retry and the third retry would happen 72h after the second retry. By default, there is no upper limit to the
+## number of retries; however, you may set one with max_retries.
 ## Successful rebuilds are not retried.
 #retry_delay_base = 24
+
+## Configure the maximum number of times an unreproducible package will be retried (0 to N). There is no default upper
+## limit.
+#max_retries =
