Implement an initial_delay option.
This allows for an initial delay to be added to newly enqueued packages.

--- a/contrib/confs/rebuilderd.conf
+++ b/contrib/confs/rebuilderd.conf
@@ -42,6 +42,10 @@
 ## Successful rebuilds are not retried.
 #retry_delay_base = 24
 
+## Configure the initial delay for rebuild jobs (in seconds). This can be useful when packages appear before all build
+## information is available, as is sometimes the case. If the value is 0 or omitted, no delay is added.
+#initial_delay = 0
+
 ## Configure the maximum number of times an unreproducible package will be retried (0 to N). There is no default upper
 ## limit.
 #max_retries =
