--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -4,6 +4,8 @@ endpoint = "http://127.0.0.1:8484"
 #signup_secret = "INSECURE"
 # the architectures the worker can build. Defaults to the worker's native architecture if omitted
 #supported_architectures = ["x86_64", "all"]
+## Number of seconds to sleep when no work is available (default: 180)
+#idle_delay = 180
 
 [build]
 #timeout = 86400 # 24 hours
