--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -21,3 +21,5 @@ serde_json = "1"
 tempfile = "3.3.0"
 tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
 diesel = "2.2.10"
+rand = "0.9"
+rstest = { version = "0.17.0" }
