add search_type to openapi spec

--- a/contrib/docs/rebuilderd-v1.yml
+++ b/contrib/docs/rebuilderd-v1.yml
@@ -39,6 +39,7 @@ paths:
         - $ref: '#/components/parameters/component'
 
         - $ref: '#/components/parameters/name'
+        - $ref: '#/components/parameters/search_type'
         - $ref: '#/components/parameters/version'
         - $ref: '#/components/parameters/architecture'
       responses:
@@ -271,6 +272,7 @@ paths:
         - $ref: '#/components/parameters/component'
 
         - $ref: '#/components/parameters/name'
+        - $ref: '#/components/parameters/search_type'
         - $ref: '#/components/parameters/version'
       responses:
         "200":
@@ -329,6 +331,7 @@ paths:
         - $ref: '#/components/parameters/component'
 
         - $ref: '#/components/parameters/name'
+        - $ref: '#/components/parameters/search_type'
         - $ref: '#/components/parameters/version'
         - $ref: '#/components/parameters/architecture'
       responses:
@@ -388,6 +391,7 @@ paths:
         - $ref: '#/components/parameters/component'
 
         - $ref: '#/components/parameters/name'
+        - $ref: '#/components/parameters/search_type'
         - $ref: '#/components/parameters/version'
         - $ref: '#/components/parameters/architecture'
       responses:
@@ -437,6 +441,7 @@ paths:
         - $ref: '#/components/parameters/component'
 
         - $ref: '#/components/parameters/name'
+        - $ref: '#/components/parameters/search_type'
         - $ref: '#/components/parameters/version'
         - $ref: '#/components/parameters/architecture'
       responses:
@@ -1477,6 +1482,22 @@ components:
         type: string
       description: |-
         Filters the results by the version of the package.
+    search_type:
+      in: query
+      name: search_type
+      required: false
+      schema:
+        type: string
+        enum:
+          - exact
+          - contains
+          - starts_with
+        default: exact
+      description: |-
+        Specifies the matching strategy for the 'name' parameter.
+        - `exact`: Matches the name exactly (default).
+        - `contains`: Matches if the name contains the provided string.
+        - `starts_with`: Matches if the name starts with the provided string.
     distribution:
       in: query
       name: distribution
